Fix for task description that was overflowing its parent element

--- a/T-FORCE/wwwroot/css/t-force.css
+++ b/T-FORCE/wwwroot/css/t-force.css
@@ -12,3 +12,6 @@
 .list-group-item{
 	border: 2px solid rgba(0,0,0,.125);
 }
+.task-description{
+	overflow: auto;
+}
